--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
 Programs/
 Programs1/
-*.txt
 *.o
 *.out
 *.gch
 .vscode
+
+#test files over 100MB
+i4095.txt
+i5001.txt
+i7501.txt
+i8191.txt
+i10001.txt
+i15001.txt
+i20001.txt
+
+n4095.txt
+n5001.txt
+n7501.txt
+n8191.txt
+n10001.txt
+n15001.txt
+n20001.txt
+
+p4095.txt
+p5000.txt
+p5001.txt
+p7501.txt
+p8191.txt
+p10001.txt
+p15001.txt
+p20001.txt
